@@ -169,6 +169,9 @@ Markers::readLocalMarkerDefs( std::vector<DefRec_Marker_struct*> * p_vecMarkerDe
       }
       else
       {
+	 // notice that this stream have data
+	 g_vecUnifyCtls[i]->has_data = true;
+
 	 // close marker buffer
 	 OTF_RStream_closeMarkerBuffer( p_loc_defmarkers_rstream );
 
@@ -189,7 +192,7 @@ Markers::readLocalMarkerDefs( std::vector<DefRec_Marker_struct*> * p_vecMarkerDe
       OTF_RStream_close( p_loc_defmarkers_rstream );
       // close file manager for reader stream
       OTF_FileManager_close( p_loc_defmarkers_manager );
-      
+
       VPrint( 2, "  Closed OTF reader stream [namestub %s id %x]\n",
 	      Params.in_file_prefix.c_str(),
 	      g_vecUnifyCtls[i]->streamid );
